--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -25,10 +25,11 @@ header-includes: |
     \usepackage{bbm}
     \usepackage{float}
     \DeclarePairedDelimiter\ceil{\lceil}{\rceil}
+    \newcommand{\norm}[1]{\| #1 \|}
 ---
 
 ```{r setup, include = FALSE}
-knitr::opts_chunk$set(fig.pos = "!h", out.extra = "")
+knitr::opts_chunk$set(out.extra = "")
 ```
 
 # Introduction
@@ -593,8 +594,10 @@ scalar value and obtains its own coefficient. In contrast with the number of par
 
 Hence, the model can be written as
 
+\newpage
+
 \begin{equation}
-\mu_i = \beta_0 + \sum_{j \in J^{\text{num}}}\beta_j x_{i,j} + \sum_{j \in J^{\text{cat}}} \beta_j z_{i,j},
+\mu_i = \beta_0 + \sum_{j \in J^{\text{num}}}\beta_{j} x_{i,j} + \sum_{j \in J^{\text{cat}}} \beta_{j} z_{i,j},
 \end{equation}
 
 where $z_{i,j}$ represents the embedding value for $i$th instance of the categorical column $X_j$. 
@@ -686,21 +689,90 @@ knitr::include_graphics("images/flood_zone.png")
 
 For Model 4, the neural network with multi-dimensional embeddings, we would need to treat the learned values before
 we can plot them. Specifically, we need to reduce the dimension of the data to 2D for embeddings with more than
-two dimensions. The standard approachs for this are principal component analysis (PCA) and t-distributed stochastic
-neighbor embedding (t-SNE), both of which we illustrate below.
+two dimensions. The standard approachs for this are principal component analysis (PCA; @shlens2014tutorial) 
+and t-distributed stochastic
+neighbor embedding (t-SNE; @Maaten2008a), both of which we illustrate.
 
-### PCA
+### Principal Component Analysis
 
-(TODO: insert brief theoretical stuff). See Figure \@ref(fig:flood-zone-pca).
+In both approaches, the overarching theme is as follows: We have a collection of points in higher dimensional space,
+$\mathcal{X} = \{x_1, x_2, \dots, x_n\}$ that we wish to map to some lower dimensional space, typically $\mathbb{R}^2$,
+obtaining $\mathcal{Y} = \{y_1, y_2, \dots, y_n\}$. PCA performs a linear change of coordinates on 
+the input data so that the variance of the data is maximized along each orthogonal coordinate, also known as
+*principal component*, successively. Formally, if we denote $\mathbf{X}$ and $\mathbf{Y}$ to be the matrices whose 
+columns are elements of 
+$\mathcal{X}$ and $\mathcal{Y}$, respectively, this can be represented as looking for an orthonormal matrix $\mathbf{P}$
+in $\mathbf{Y} = \mathbf{PX}$ such that the covariance matrix of $\mathbf{Y}$, $\frac{1}{n}\mathbf{YY^T}$, is diagonal.
+Here, the rows of $\mathbf{P}$ are the principal components that define the resulting coordinate system. It turns out
+that that these principal components are the eigenvectors of the covariance matrix of $\mathbf{X}$, i.e., 
+$\mathbf{C_X} \equiv \frac{1}{n}\mathbf{XX^T}$. In practice, numerical procedures, including R's \texttt{prcomp()}
+which we use, utilize singular value decomposition (SVD) to compute the eigenvectors.
+
+In Figure \@ref(fig:flood-zone-pca), we plot the learned embeddings for `flood_zone` in Model 3 on the coordinate
+system defined by the first two principle components. (TODO: add commentary after update pic)
 
 ```{r flood-zone-pca, echo = FALSE, fig.cap="Flood zone PCA", out.width = "60%", fig.align = "center"}
 knitr::include_graphics("images/flood_zone_pca.png")
 ```
 
+### t-Distributed Stochastic Neighbor Embedding
 
-### t-SNE
+In contrast with PCA, t-SNE is a nonlinear technique. At a high level, it computes a similarity metric, in the form of
+conditional probabilities based on pairwise distances, among points in $\mathcal{X}$, then look for points $\mathcal{Y}$
+in the lower dimensional space which have similarity metric values (for a differently defined metric) that are "close" to those of corresponding pairs of 
+points in the original data.
 
-(TODO: insert brief theoretical stuff). See Figure \@ref(fig:flood-zone-tsne).
+Let $p_{j|i}$ denote the probability that point $x_i$ picks point $x_j$ as its *neighbor*, if it picks neighbors in
+proportion to their density under an $n$-dimension Gaussian centered at $x_i$. Formally, we can write $p_{j|i}$ as
+
+\begin{equation}
+p_{j|i} = \frac{\exp(\norm{x_i - x_j}^2 / 2\sigma_i^2)}{\sum_{k\neq i} \exp(-\norm{x_i - x_k}^2 / 2\sigma_i^2)}. (\#eq:pji)
+\end{equation}
+
+The similarity metric for the originals space symmetrizes this conditional probability and is defined as
+
+\begin{equation}
+p_{ij} = \frac{p_{j|i} + p_{i|j}}{2n}.
+\end{equation}
+
+On the other hand, in the target space, t-SNE assumes the neighbor selection is driven by a Student 
+t-distribution with one
+degree of freedom, i.e., a Cauchy distribution. The similarity metric for a pair of points in $\mathcal{Y}$ is 
+then defined as the joint probability
+
+\begin{equation}
+q_{ij} = \frac{(1 + \norm{y_i - y_j}^2)^{-1}}{\sum_{k \neq l} (1 + \norm{y_k - y_l}^2)^{-1}}.
+\end{equation}
+
+With the similarity metrics defined for each space, we can then state the objective for "closeness" for the sets of
+points, which is the Kullback–Leibler divergence from Q to P:
+
+\begin{equation}
+D_{KL}(P || Q) = \sum_{i \neq j} p_{ij} \log \frac{p_{ij}}{q_{ij}}. (\#eq:tsne-obj)
+\end{equation}
+
+We now circle back to Equation \@ref(eq:pji) and discuss $\sigma_i$. The variance of the Gaussian is allowed to vary
+depending on where the point is in the space; specifically, it should reflect the density or sparsness of surrounding 
+points. To train this parameter, t-SNE introduces a hyperparameter, *perplexity*, which is a scalar value set by the
+user, and is defined as
+
+\begin{equation}
+Perp(P_i) = 2^{H(P_i)},
+\end{equation}
+
+where $H(P_i)$ denotes the entropy of $P_i$,
+
+\begin{equation}
+H(P_i) = -\sum_j p_{j|i}\log_2 p_{j|i},
+\end{equation}
+
+and $P_i$ is the Gaussian parameterized by $x_i$ and $\sigma_i$. During training, t-SNE looks for $P_i$ that have
+perpelxity corresponding to the user input. Finally, the objective as stated in Equation \@ref(eq:tsne-obj) is differentiable, and is trained via gradient descent. 
+
+While t-SNE is a powerful visualization technique, there are a few points the modeler should be mindful of in practice.
+First, the resulting plot can be very sensitive to the perplexity hyperparameter. 
+In Figures \@ref(fig:flood-zone-tsne), we display the t-SNE of the learned embeddings for `flood_zone` in
+Model 3 with various perplexity settings. (TODO: add more commentary).
 
 ```{r flood-zone-tsne, echo = FALSE, fig.cap="Flood zone t-SNE", out.width = "60%", fig.align = "center"}
 knitr::include_graphics("images/flood_zone_tsne.png")
