--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,3 +1,10 @@
+@article{shlens2014tutorial,
+  title={A tutorial on principal component analysis},
+  author={Shlens, Jonathon},
+  journal={arXiv preprint arXiv:1404.1100},
+  year={2014}
+}
+
 @misc{kuo2020explainability,
       title={Towards Explainability of Machine Learning Models in Insurance Pricing}, 
       author={Kevin Kuo and Daniel Lupton},
