--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -8926,3 +8926,18 @@ title = {{Loss Reserves and the Employment Status of the Appointed Actuary}},
 volume = {16},
 year = {2012}
 }
+
+@article{Huang2020,
+abstract = {We propose TabTransformer, a novel deep tabular data modeling architecture for supervised and semi-supervised learning. The TabTransformer is built upon self-attention based Transformers. The Transformer layers transform the embeddings of categorical features into robust contextual embeddings to achieve higher prediction accuracy. Through extensive experiments on fifteen publicly available datasets, we show that the TabTransformer outperforms the state-of-the-art deep learning methods for tabular data by at least 1.0{\%} on mean AUC, and matches the performance of tree-based ensemble models. Furthermore, we demonstrate that the contextual embeddings learned from TabTransformer are highly robust against both missing and noisy data features, and provide better interpretability. Lastly, for the semi-supervised setting we develop an unsupervised pre-training procedure to learn data-driven contextual embeddings, resulting in an average 2.1{\%} AUC lift over the state-of-the-art methods.},
+archivePrefix = {arXiv},
+arxivId = {2012.06678},
+author = {Huang, Xin and Khetan, Ashish and Cvitkovic, Milan and Karnin, Zohar},
+eprint = {2012.06678},
+file = {:C$\backslash$:/Users/user-pc/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Huang et al. - 2020 - TabTransformer Tabular Data Modeling Using Contextual Embeddings.pdf:pdf},
+issn = {23318422},
+journal = {arXiv},
+month = {dec},
+title = {{TabTransformer: Tabular data modeling using contextual embeddings}},
+url = {http://arxiv.org/abs/2012.06678},
+year = {2020}
+}
