--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -8951,3 +8951,33 @@ title = {{Loss Reserves and the Employment Status of the Appointed Actuary}},
 volume = {16},
 year = {2012}
 }
+
+@article{Huang2020,
+abstract = {We propose TabTransformer, a novel deep tabular data modeling architecture for supervised and semi-supervised learning. The TabTransformer is built upon self-attention based Transformers. The Transformer layers transform the embeddings of categorical features into robust contextual embeddings to achieve higher prediction accuracy. Through extensive experiments on fifteen publicly available datasets, we show that the TabTransformer outperforms the state-of-the-art deep learning methods for tabular data by at least 1.0{\%} on mean AUC, and matches the performance of tree-based ensemble models. Furthermore, we demonstrate that the contextual embeddings learned from TabTransformer are highly robust against both missing and noisy data features, and provide better interpretability. Lastly, for the semi-supervised setting we develop an unsupervised pre-training procedure to learn data-driven contextual embeddings, resulting in an average 2.1{\%} AUC lift over the state-of-the-art methods.},
+archivePrefix = {arXiv},
+arxivId = {2012.06678},
+author = {Huang, Xin and Khetan, Ashish and Cvitkovic, Milan and Karnin, Zohar},
+eprint = {2012.06678},
+file = {:C$\backslash$:/Users/user-pc/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Huang et al. - 2020 - TabTransformer Tabular Data Modeling Using Contextual Embeddings.pdf:pdf},
+issn = {23318422},
+journal = {arXiv},
+month = {dec},
+title = {{TabTransformer: Tabular data modeling using contextual embeddings}},
+url = {http://arxiv.org/abs/2012.06678},
+year = {2020}
+}
+@article{Ark2019,
+abstract = {We propose a novel high-performance interpretable deep tabular data learning network, TabNet. TabNet utilizes a sequential attention mechanism that softly selects features to reason from at each decision step and then aggregates the processed information to make a final prediction decision. By explicitly selecting sparse features, TabNet learns very efficiently as the model capacity at each decision step is fully utilized for the most relevant features, resulting in a high performance model. This sparsity also enables more interpretable decision making through the visualization of feature selection masks. We demonstrate that TabNet outperforms other neural network and decision tree variants on a wide range of tabular data learning datasets and yields interpretable feature attributions and insights into the global model behavior.},
+archivePrefix = {arXiv},
+arxivId = {1908.07442},
+author = {Arık, Sercan and Pfister, Tomas},
+eprint = {1908.07442},
+file = {:C$\backslash$:/Users/user-pc/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Arık, Pfister - 2019 - TaBNET Attentive Interpretable Ta bular Learning.pdf:pdf},
+issn = {23318422},
+journal = {arXiv},
+month = {aug},
+publisher = {arXiv},
+title = {{TabNet: Attentive Interpretable Ta bular Learning}},
+url = {www.aaai.org},
+year = {2019}
+}
